# azure_chatgpt_requester

./: .gitignore  README.md  pyproject.toml
src/: azure_chatgpt.py  ms_chatgpt.py
src/chatgpt_requester/: azure.py
tests/: test_azure_chatgpt.py  test_azure_requester.py  test_ms_chatgpt.py
