[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatgpt-requester"
version='0.0.1'
authors = [
{name="SoCrespo", email="author@€xample.com"},
]
description = "A simple library to request ChatGPT API (through an Azure instance)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
"Development Status :: 4 - Beta",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Operating System :: OS Independent",
]




